static/css/style.css
/* ... */
.movie-picture-display img {
    object-fit: fill;
    height: 100%;
    width: 100%;
    transition: all 0.2s ease-in-out;
}

.movie-picture-display a:hover img {
    transform: scale(1.04)
}

.movie-carousel {
    height: 350px;
    width: 100%;
    padding: 10px 10px 0;
    overflow-x: scroll;
    overflow-y: hidden;
    background-color: #c4c4c4;
    margin-bottom: 3rem;
    display: flex;
    flex-wrap: nowrap;
    align-content: flex-start;
    align-items: center;
}

.movie-text,
.search-results-container h4 {
    height: 80px;
    text-align: center;
    margin-bottom: 0;
    padding-top: 2px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: nowrap;
}

.movie-placeholder {
    padding: 20px 10px;
    background-color: currentColor;
    opacity: .5;
    border-radius: 3px;
}

.movie-placeholder button {
    width: 100%;
    margin: 0;
}

.movie-placeholder p {
    color: #fafafa;
    text-align: center;
    margin: 0;
    height: 85%
}

/* Movie Form */

select {
    color: #8e8e8e;
}

select>.text-black {
    color: #000 !important;
}

.checkbox-container>.series-checkboxes {
    width: initial;
}

.star-rating-container {
    margin: 10px 0 0 auto;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    text-align: center;
}

.star-rating-container i:hover {
    cursor: pointer;
    animation: shake 0.75s;
    animation-iteration-count: 2;
}

.star-container {
    width: 108px;
}

@keyframes shake {
    0% {
        transform: translate(1px, 1px) rotate(0deg);
    }

    10% {
        transform: translate(-1px, -2px) rotate(-1deg);
    }

    20% {
        transform: translate(-3px, 0px) rotate(1deg);
    }

    30% {
        transform: translate(3px, 2px) rotate(0deg);
    }

    40% {
        transform: translate(1px, -1px) rotate(1deg);
    }

    50% {
        transform: translate(-1px, 2px) rotate(-1deg);
    }

    60% {
        transform: translate(-3px, 1px) rotate(0deg);
    }

    70% {
        transform: translate(3px, 1px) rotate(-1deg);
    }

    80% {
        transform: translate(-1px, -1px) rotate(1deg);
    }

    90% {
        transform: translate(1px, 2px) rotate(0deg);
    }

    100% {
        transform: translate(1px, -2px) rotate(-1deg);
    }
}

.gold-star {
    color: #ffca18;
}

/* Delete Confirmation Screen */

#confirm_profile_delete {
    width: 100%;
    cursor: wait;
    display: none;
    min-height: calc(100vh - 237px);
}

#confirm_profile_delete {
    cursor: initial;
    display: none;
    min-height: calc(100vh - 397px);
}

#confirm_profile_delete i {
    font-size: 150px;
}


@media (min-width: 768px) {
    #processing {
        min-height: calc(100vh - 135px);
    }

    #confirm_profile_delete {
        min-height: calc(100vh - 296px);
    }
}

/* Modal */

.modal-search-bar-container input {
    width: 80%;
    margin-top: 15px;
    text-align: center;
}

/* Reviews */

.reviews-container,
.review-footer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.reviews-header {
    border: 1px solid rgba(0, 0, 0, .125);
    border-radius: 0.25rem;
    padding: 15px 0;
}

.reviews-header-img,
.reviews-header a {
    height: 100px;
    width: auto;
}

.reviews-header .image-container {
    margin: 0 auto;
}

.sub-script {
    font-size: 0.6rem;
    font-weight: 200;
    padding-left: 10px;
}

.grey-text {
    color: rgb(118, 118, 118);
}

.small-text {
    font-size: 0.85rem;
}

.review-card {
    margin: 15px auto;
}

.five-stars-container {
    width: 100%;
    height: 23px;
    display: flex;
    justify-content: center;
}

.five-stars-container img,
.five-stars-container div {
    width: 120px;
}

.five-stars-container img {
    height: 23px;
    position: absolute;
    right: 0;
}

.five-stars-container .mask {
    height: 23px;
    width: 100%;
    position: absolute;
    right: 0;
    background-color: #fff;
    z-index: 3;
    object-fit: cover;
    object-position: right;
}

.five-stars {
    z-index: 2;
}

@media(min-width: 993px) {
    .review-card {
        width: 47%;
    }
}


/* Search */

.search-results-container {
    height: 100%;
    min-height: 320px;
    width: 100%;
    padding: 15px 5px;
    margin-bottom: 2rem;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    border: 1px solid rgba(0, 0, 0, .125);
    border-radius: 0.25rem;
    justify-content: space-evenly;
}

@media(min-width:992px) {
    .search-results-container {
        justify-content: flex-start;
        padding: 15px 5px 15px 25px;
    }
}

/* view movie */

.view-movie-button-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
}

.accordion-button:not(.collapsed) {
    color: #000;
    background-color: rgba(255, 202, 24, 0.75);
}

.accordion-button:not(.collapsed)::after {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")
}

.accordion-button:focus {
    z-index: 3;
    border-color: #000;
    outline: 0;
    box-shadow: 0 0 0 0.25rem rgb(255 202 24 / 25%);
}

.form-check-input:focus {
    outline: 0;
    box-shadow: 0 0 0 0.25rem rgb(255 202 24 / 25%);
    border-color: #fff;
}

.form-check-input:checked {
    background-color: #ffca18;
    border-color: #fff;
    background-image: initial;
}

.form-switch .form-check-input:focus {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e") !important;
}
/* ... */

